--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                     <p>Desde que me formei em Estatística pela Universidade Federal do Paraná em 2016, 
 					venho procurando exercer a atividade em nível profissional. 
 					Estou disposto a ajudar as pessoas a tomarem decisões melhores baseadas em informação. 
-					Sou um entusiasta de Aprendizado de Máquina e também possuo conhecimentos 
-					da área de Tecnologia da Informação.</p>
+					Possuo conhecimentos nas áreas de Ciência de Dados e Tecnologia da Informação.</p>
                 </div><!--//profile-->
             </div><!--//container-->
         </div><!--//intro-->
@@ -444,8 +443,9 @@
 					</div><!--//job-meta-->
 					<div class="job-desc">
 						<p>Após seleção interna composta de prova técnica e entrevista, passo a compor a equipe de desenvolvimento e Tecnologia da Informação em outra unidade interna do
-						Banco do Brasil, denominada Cenop Operações Curitiba. Lá, além do trabalho de desenvolvimento de softwares, também passo a construir análises de dados, envolvendo a 
-						utilização de bancos de dados, linguagem R e softwares para construção de análises interativas, como o Spotfire.
+						Banco do Brasil, denominada Cenop Operações Curitiba. Lá, Trabalho com de desenvolvimento de softwares (primariamente em Java, com Spring Boot) 
+						e também compondo análises de dados, envolvendo a utilização de bancos de dados, linguagens R e Python e softwares para construção de 
+						dashboards interativas, como o Spotfire.
 						</p> 
 					</div><!--//job-desc-->
 				</div><!--//item-->
@@ -556,11 +556,11 @@
 			<div class="intro">
 				<img class="profile-image" src="assets/images/profile-image.png" alt="">
 				<div class="dialog">
-					<p>Atualemente trabalho no Banco do Brasil, mas posso aceitar propostas externas sem problemas.</p>
+					<p>Trabalho no Banco do Brasil, mas posso aceitar propostas externas sem problemas.</p>
 					<p><strong>Posso ajudar com o seguinte:</strong></p>
 					<ul class="list-unstyled service-list">
-						<li><i class="fa fa-check" aria-hidden="true"></i> Análises estatísticas de informações, principalmente em regressão estatística e aprendizado de máquina</li>
-						<li><i class="fa fa-check" aria-hidden="true"></i> Criação de painéis interativos que contenham as análises, utilizando a biblioteca Shiny</li>
+						<li><i class="fa fa-check" aria-hidden="true"></i> Back-end de aplicações com Java e Spring Boot</li>
+						<li><i class="fa fa-check" aria-hidden="true"></i> Análises de dados, principalmente com modelagem estatística e aprendizado de máquina</li>
 						<li><i class="fa fa-check" aria-hidden="true"></i> Integração de análises estatística em aplicativos web</li>
 					</ul>
 					<p>Escreva para <a href="mailto:bassosrd@tcd.ie">bassosrd@tcd.ie</a> ou então <a href="mailto:danielbassoribas@hotmail.com">danielbassoribas@hotmail.com</a> se estiver interessado.
