--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="container text-center">
                 <img class="profile-image" src="assets/images/profile-image.png" alt="">
                 <h1 class="name">Daniel Basso Ribas</h1>
-                <div class="title">Estatístico e Desenvolvedor</div>
+                <div class="title">Cientista de Dados e Desenvolvedor</div>
                 <div class="profile">
                     <p>Desde que me formei em Estatística pela Universidade Federal do Paraná em 2016, 
 					venho procurando exercer a atividade em nível profissional. 
