--- a/english/index.html
+++ b/english/index.html
@@ -360,9 +360,9 @@
 
 
 		<section id="skills-section" class="skills-section section text-center">
-			<h2 class="section-title">Habilidades Profissionais</h2>
+			<h2 class="section-title">Professional Skills</h2>
 			<div class="top-skills">
-				<h3 class="subtitle">Principais Habilidades </h3>
+				<h3 class="subtitle">Main Skills </h3>
 				<div class="row">
 					<div class="item col-12 col-md-4">
 						<div class="item-inner">
@@ -452,7 +452,7 @@
 				</div><!--//item-->
 				<div class="item">
 					<div class="work-place">
-						<h3 class="place">Banco do Brasil S/A</h3>
+						<h3 class="place">Banco do Brasil S/A (Bank of Brazil)</h3>
 						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
 						<br />
 					</div>
@@ -461,9 +461,7 @@
 						<div class="time">2016 - 2018</div>
 					</div><!--//job-meta-->
 					<div class="job-desc">
-						<p>Após o intercâmbio volto ser alocado no Cenop Serviços Curitiba; após um breve período de adaptação, no começo de 2017 ingresso na equipe de desenvolvimento,
-							construindo softwares que são usados pelas pelas equipes do centro para facilitar e automatizar a realização de suas atividades. Foco no desenvolvimento de aplicações Web em Java. 
-							Também atuando com desenvolvimento em PHP e modelagem de banco de dados MySQL.
+						<p>After the exchange I was allocated to Cenop Serviços Curitiba; After a brief period of adaptation, early in 2017, I joined their development team, building software that is used by the center's teams to facilitate and automate their activities. Focus on web application development in Java. Also working with PHP development and MySQL database modeling.
 						</p> 
 					</div><!--//job-desc-->
 				</div><!--//item-->
@@ -480,8 +478,7 @@
 					</div><!--//job-meta-->
 					<div class="job-desc">
 						<p>
-							Entre Agosto de 2015 e Agosto de 2016, realizei Intercâmbio no Trinity College Dublin, Irlanda. Lá, tive a oportunidade de participar de um estágio acadêmico com o Dr. Jason Wyse, 
-							com o objetivo de refinar a técnica de Análise de Classes Latentes para separação de indivíduos em grupos homogêneos.
+							Between August 2015 and August 2016, I held an exchange program at Trinity College Dublin, Ireland. There, I had the opportunity to attend an academic internship with Dr. Jason Wyse, with the goal of refining the Latent Class Analysis technique for separating individuals into homogeneous groups.
 						</p> 
 						<ul>
 							<li><a href = "documents/RelatorioEstagioIntercambio.pdf"> Relatório descritivo</a> do estágio acadêmico, com um resumo das atividades realizadas.</li>
@@ -501,10 +498,7 @@
 					</div><!--//job-meta-->
 					<div class="job-desc">
 						<p>
-							Paralelamente ao trabalho no Banco do Brasil, fui voluntário por dois anos no Laboratório de Estatística Aplicada (LEA) da Universidade Federal do Paraná.
-							O Laboratório ferece assessoria estatística a pesquisas desenvolvidas na Universidade Federal do Paraná e em outras instituições de ensino e pesquisa, 
-							contando com o envolvimento de professores e alunos do curso de Estatística. As consultorias são uma oportunidade única para aplicar na prática o que é ensinado
-							durante o curso, além de desenvolver habilidades relacionados ao contato com clientes.
+							In parallel to my work at Banco do Brasil, I volunteered for two years at the Applied Statistics Laboratory (LEA) at the Federal University of Paraná. The Laboratory provides statistical advice to research carried out at the Federal University of Paraná and other educational and research institutions, with the involvement of professors and students of the Statistics course. Consultancies are a unique opportunity to apply what is taught during the course in practice, as well as develop customer contact skills.
 						</p>
 						<ul>
 							<li> <a href = "documents/LaboratoriaEstatisticaAplicada.pdf"> Comprovante de  participação</a>  no LEA (parcial).</li>
@@ -520,13 +514,11 @@
 						<br />
 					</div>
 					<div class="job-meta">
-						<div class="title">Escriturário</div>
+						<div class="title">Bank Clerk</div>
 						<div class="time">2013 - 2015</div>
 					</div><!--//job-meta-->
 					<div class="job-desc">
-						<p>Nos dois anos seguintes me transferi para uma unidade interna do Banco do Brasil, chamada Cenop Serviços Curitiba, onde a atividade primaria é colaborar coma a defesa instituição em ações judiciais.
-							Neste período tive a oportunidade de realizar diversos treinamentos de novos funcionários e gestores para a realização de suas atividades, consolidando as habilidades de comunicação, trabalho em equipe
-							e conhecimento dos produtos bancários.
+						<p>For the next two years I moved to an internal unit of Banco do Brasil called Cenop Serviços Curitiba, where the primary activity is to help defend the institution in lawsuits. During this period I had the opportunity to conduct various training of new employees and managers to carry out their activities, consolidating communication skills, teamwork and knowledge of banking products.
 						</p> 
 					</div><!--//job-desc-->
 				</div><!--//item-->
@@ -538,12 +530,12 @@
 						<br />
 					</div>
 					<div class="job-meta">
-						<div class="title">Atendente em <br/> Central de Atendimento</div>
+						<div class="title">Call center operator</div>
 						<div class="time">2011 - 2013</div>
 					</div><!--//job-meta-->
 					<div class="job-desc">
-						<p> <br />Logo após ser aprovado no concurso do Banco do Brasil, fui lotado nos dois primeiros anos na Central de Atendimento Banco do Brasil, realizando transações bancárias, tirando dúvidas e esclarecendo procedimentos aos clientes.
-							Esse foi um período de desenvolvimento de  habilidades de comunicação, além de aprendizado sobre os produtos e funcionamento do Banco.   
+						<p> <br />Shortly after being approved at Banco do Brasil, I was allocated for the first two years at the Banco do Brasil Call Center, performing bank transactions, answering questions and clarifying procedures for clients.
+						During this time I had the opportunity to develop communication skills, as well as learn about the Bank's products and operations.  
 						</p> 
 					</div><!--//job-desc-->
 				</div><!--//item-->
@@ -553,18 +545,18 @@
 		</section><!--//section-->
 
 		<section id="contact-section" class="contact-section section">
-			<h2 class="section-title">Entre em Contato</h2>
+			<h2 class="section-title">Get in Touch</h2>
 			<div class="intro">
 				<img class="profile-image" src="../assets/images/profile-image.png" alt="">
 				<div class="dialog">
-					<p>Trabalho no Banco do Brasil, mas posso aceitar propostas externas sem problemas.</p>
-					<p><strong>Posso ajudar com o seguinte:</strong></p>
+					<p>I work at Banco do Brasil, but I'm open for external proposals.<p>
+					<p><strong>I can help with the following:</strong></p>
 					<ul class="list-unstyled service-list">
-						<li><i class="fa fa-check" aria-hidden="true"></i> Back-end de aplicações com Java e Spring Boot</li>
-						<li><i class="fa fa-check" aria-hidden="true"></i> Análises de dados, principalmente com modelagem estatística e aprendizado de máquina</li>
-						<li><i class="fa fa-check" aria-hidden="true"></i> Integração de análises estatística em aplicativos web</li>
+						<li><i class="fa fa-check" aria-hidden="true"></i> back-end development with Java and Spring Boot</li>
+						<li><i class="fa fa-check" aria-hidden="true"></i> Data analysis, mainly using statistical modeling and machine learning (R and Python)</li>
+						<li><i class="fa fa-check" aria-hidden="true"></i> Integration of data analytics into web applications</li>
 					</ul>
-					<p>Escreva para <a href="mailto:bassosrd@tcd.ie">bassosrd@tcd.ie</a> ou então <a href="mailto:danielbassoribas@hotmail.com">danielbassoribas@hotmail.com</a> se estiver interessado.
+					<p>Drop me a line at <a href="mailto:bassosrd@tcd.ie">bassosrd@tcd.ie</a> or <a href="mailto:danielbassoribas@hotmail.com">danielbassoribas@hotmail.com</a> if you are interested.
 					<ul class="social list-inline">
 						<li class="list-inline-item"><a href="https://www.linkedin.com/in/daniel-basso-ribas-b60215135"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
 						<li class="list-inline-item"><a href="https://www.facebook.com/daniel.bassoribas"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
