--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
 						<div class="time">2013 - 2015</div>
 					</div><!--//job-meta-->
 					<div class="job-desc">
-						<p>Nos dois anos seguintes me transferi para uma unidade interna do Banco do Brasil, chamada Cenop Serviços Curitiba, onde a atividade primaria é colaborar coma a defesa instituição em ações judiciais.
+						<p>Nos dois anos seguintes me transferi para uma unidade interna do Banco do Brasil, chamada Cenop Serviços Curitiba, onde a atividade primaria é colaborar com a defesa da instituição em ações judiciais.
 							Neste período tive a oportunidade de realizar diversos treinamentos de novos funcionários e gestores para a realização de suas atividades, consolidando as habilidades de comunicação, trabalho em equipe
 							e conhecimento dos produtos bancários.
 						</p> 
@@ -556,12 +556,12 @@
 			<div class="intro">
 				<img class="profile-image" src="assets/images/profile-image.png" alt="">
 				<div class="dialog">
-					<p>Trabalho no Banco do Brasil, mas posso aceitar propostas externas sem problemas.</p>
+					<p>Trabalho no Banco do Brasil, mas estou aberto para propostas externas.</p>
 					<p><strong>Posso ajudar com o seguinte:</strong></p>
 					<ul class="list-unstyled service-list">
-						<li><i class="fa fa-check" aria-hidden="true"></i> Back-end de aplicações com Java e Spring Boot</li>
-						<li><i class="fa fa-check" aria-hidden="true"></i> Análises de dados, principalmente com modelagem estatística e aprendizado de máquina</li>
-						<li><i class="fa fa-check" aria-hidden="true"></i> Integração de análises estatística em aplicativos web</li>
+						<li><i class="fa fa-check" aria-hidden="true"></i> Desenvolvimento back-end com Java e Spring Boot</li>
+						<li><i class="fa fa-check" aria-hidden="true"></i> Análises de dados, principalmente com modelagem estatística e aprendizado de máquina (R e Python)</li>
+						<li><i class="fa fa-check" aria-hidden="true"></i> Integração de análises de dados em aplicativos web</li>
 					</ul>
 					<p>Escreva para <a href="mailto:bassosrd@tcd.ie">bassosrd@tcd.ie</a> ou então <a href="mailto:danielbassoribas@hotmail.com">danielbassoribas@hotmail.com</a> se estiver interessado.
 					<ul class="social list-inline">
