Correções na tradução.

--- a/english/index.html
+++ b/english/index.html
@@ -168,7 +168,7 @@
 				</div><!--//item-->
 				<div class="item col-12 col-md-4">
 					<div class="item-inner">
-						<h3 class="degree">PHP II (Avançado)</h3>
+						<h3 class="degree">PHP II</h3>
 						<div class="education-body">
 							Elaborata Informática
 						</div><!--//education-body-->
@@ -185,7 +185,7 @@
 				</div><!--//item-->
 				<div class="item col-12 col-md-4">
 					<div class="item-inner">
-						<h3 class="degree">Banco de Dados MySQL</h3>
+						<h3 class="degree">MySQL Database</h3>
 						<div class="education-body">
 							Elaborata Informática
 						</div><!--//education-body-->
@@ -205,7 +205,7 @@
 			<div class="row">
 				<div class="item col-12 col-md-4">
 					<div class="item-inner">
-						<h3 class="degree">Java e Java II (Avançado)</h3>
+						<h3 class="degree">Java and Java II</h3>
 						<div class="education-body">
 							Elaborta Informática
 						</div><!--//education-body-->
@@ -270,7 +270,7 @@
 
 				 <div class="item col-12 col-md-4">
 					<div class="item-inner">
-						<h3 class="degree">Desenvolva uma aplicação com Django 2.0 e deploy no Heroku</h3>
+						<h3 class="degree">Develop an application with Django 2.0 and deploy to Heroku</h3>
 						<div class="education-body">
 							Udemy
 						</div><!--//education-body-->
