Botões para alterar a língua da página,

--- a/english/index.html
+++ b/english/index.html
@@ -23,6 +23,7 @@
     <header class="header">
         <div class="top-bar container-fluid">
             <div class="actions">
+				<a class="btn d-none d-md-inline-block" href="../">Em português</a>
                 <a class="btn d-none d-md-inline-block" href="mailto:danielbassoribas@hotmail.com; bassosrd@tcd.ie"><i class="fas fa-paper-plane" aria-hidden="true"></i> Contact Me</a>
                 <a class="btn" href="../documents/ResumeDanielBassoRibas.pdf"><i class="fas fa-download" aria-hidden="true"></i> Download my resume</a>
             </div><!--//actions-->
