--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <header class="header">
         <div class="top-bar container-fluid">
             <div class="actions">
+				<a class="btn d-none d-md-inline-block" href="english">In English</a>
                 <a class="btn d-none d-md-inline-block" href="mailto:danielbassoribas@hotmail.com; bassosrd@tcd.ie"><i class="fas fa-paper-plane" aria-hidden="true"></i> Entre em Contato</a>
                 <a class="btn" href="documents/CurriculoDanielBassoRibas.pdf"><i class="fas fa-download" aria-hidden="true"></i> Baixe meu currículo</a>
             </div><!--//actions-->
