Melhor tradução da frase inicial.

--- a/english/index.html
+++ b/english/index.html
@@ -40,7 +40,7 @@
                 <div class="title">Data Scientist and Developer</div>
                 <div class="profile">
                     <p>Since I graduated in Statistics from the Federal University of Paraná in 2016, 
-					I have been looking for exercising it activity at a professional level. 
+					I have been looking for exercising this activity at a professional level. 
 					I am willing to help people make information-based better decisions. 
 					I have knowledge in the areas of Data Science and Information Technology.</p>
                 </div><!--//profile-->
