Inclusão dos cursos de React.

--- a/english/index.html
+++ b/english/index.html
@@ -25,7 +25,7 @@
             <div class="actions">
 				<a class="btn d-none d-md-inline-block" href="../">Em português</a>
                 <a class="btn d-none d-md-inline-block" href="mailto:danielbassoribas@hotmail.com; bassosrd@tcd.ie"><i class="fas fa-paper-plane" aria-hidden="true"></i> Contact Me</a>
-                <a class="btn" href="../documents/ResumeDanielBassoRibas.pdf"><i class="fas fa-download" aria-hidden="true"></i> Download my resume</a>
+                <a class="btn" href="../documents/ResumeDanielBassoRibas.pdf"><i class="fas fa-download" aria-hidden="true"></i> Download my resume </a>
             </div><!--//actions-->
             <ul class="social list-inline">
                 <li class="list-inline-item"><a href="https://www.linkedin.com/in/daniel-basso-ribas-b60215135"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
@@ -341,7 +341,7 @@
 						</div><!--//education-body-->
 						<div class="time">2019</div>
 						<div class="desc">
-							Set of online courses available at Alura with estimated workload of 66 hours. Covers the use of Redis, MongoDB, and Elasticsearch databases.
+							Set of online courses available at Alura with an estimated workload of 66 hours. Covers the use of Redis, MongoDB, and Elasticsearch databases.
 							<br />
 							<br />
 							<ul>
@@ -356,6 +356,46 @@
 					</div><!--//item-inner-->
 				</div><!--//item-->
 				
+				<div class="item col-12 col-md-4">
+					<div class="item-inner">
+						<h3 class="degree">React 1 e React 2</h3>
+						<div class="education-body">
+							Alura
+						</div><!--//education-body-->
+						<div class="time">2019</div>
+						<div class="desc">
+							React courses available in Alura with estimated workload of 14 hours, respectively. They cover component creation and structuring, as well as app integration with APIs through Ajax requests.
+							<br />
+							<br />
+							<ul>
+								<li> <a href ="../documents/TreinamentoReactI.pdf">Certificate</a> of React Part 1: Reusable Components for Your Webapp;</li>
+								<li> <a href ="../documents/TreinamentoReactII.pdf">Certificate</a> of React part 2: Validation, Routing and API Integration.</li>
+							</ul>
+						</div>
+					</div><!--//item-inner-->
+				</div><!--//item-->
+				
+			</div><!--//row-->
+			
+			<div class="row">
+
+				 <div class="item col-12 col-md-4">
+					<div class="item-inner">
+						<h3 class="degree">React js. From the beginning. w/ Redux and React Router</h3>
+						<div class="education-body">
+							Udemy
+						</div><!--//education-body-->
+						<div class="time">2019</div>
+						<div class="desc">
+						Online course available at Udemy with a workload of 13 hours. It covers component usage, communication with APIs using Axios, React Router for creating links within the page and also application state management with Redux.
+							<ul>
+								<li> Course <a href="https://www.udemy.com/course/react-js-from-the-beginning-w-redux-and-react-router/">description and syllabus</a>.</li>
+								<li> Course <a href = "documents/TreinamentoReactRedux.pdf"> certificate</a>.</li>
+							</ul>
+						</div>
+					</div><!--//item-inner-->
+				</div><!--//item-->
+			
 			</div><!--//row-->
 			
 		</section><!--//section-->
