--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 							<br />
 							<br />
 							<ul>
-								<li> <a href="https://www.udemy.com/nlp-natural-language-processing-with-python/"> Descrição e ementa </a> do conteúdo do curso.</li>
+								<li> <a href="https://www.udemy.com/course/react-js-from-the-beginning-w-redux-and-react-router/"> Descrição e ementa </a> do conteúdo do curso.</li>
 								<li> <a href ="documents/TreinamentoNLP.pdf">Certificado</a> do treinamento.</li>
 							</ul>
 						</div>
@@ -361,6 +361,46 @@
 					</div><!--//item-inner-->
 				</div><!--//item-->
 				
+				<div class="item col-12 col-md-4">
+					<div class="item-inner">
+						<h3 class="degree">React 1 e React 2</h3>
+						<div class="education-body">
+							Alura
+						</div><!--//education-body-->
+						<div class="time">2019</div>
+						<div class="desc">
+							Cursos sobre React disponibilizados na Alura com carga horária estimada de 6 e 8 horas, respectivamente. Cobrem a criação e estrtuturação de componentes, bem como integração com APIs através de requisições Ajax. 
+							<br />
+							<br />
+							<ul>
+								<li> <a href ="documents/TreinamentoReactI.pdf">Certificado</a> do treinamento React parte 1: Componentes reutilizáveis para sua webapp;</li>
+								<li> <a href ="documents/TreinamentoReactII.pdf">Certificado</a> do treinamento React parte 2: Validação, Rotas e Integração com API.</li>
+							</ul>
+						</div>
+					</div><!--//item-inner-->
+				</div><!--//item-->
+				
+			</div><!--//row-->
+			
+			<div class="row">
+
+				 <div class="item col-12 col-md-4">
+					<div class="item-inner">
+						<h3 class="degree">React js. From the beginning. w/ Redux and React Router</h3>
+						<div class="education-body">
+							Udemy
+						</div><!--//education-body-->
+						<div class="time">2019</div>
+						<div class="desc">
+						Curso online disponibilizado na Udemy com carga horária de 13 horas. Cobre a utilização de componentes, comunicação com APIs usando Axios, React Router para a criação de links dentro da página e também gerenciamento do estado da aplicação com Redux.
+							<ul>
+								<li> <a href="https://www.udemy.com/nlp-natural-language-processing-with-python/"> Descrição e ementa </a> do conteúdo do curso.</li>
+								<li> <a href = "documents/TreinamentoReactRedux.pdf"> Certificado </a> do treinamento.</li>
+							</ul>
+						</div>
+					</div><!--//item-inner-->
+				</div><!--//item-->
+			
 			</div><!--//row-->
 			
 		</section><!--//section-->
