Atualização currículo em Inglês.

--- a/english/index.html
+++ b/english/index.html
@@ -474,7 +474,7 @@
 						<br />
 					</div>
 					<div class="job-meta">
-						<div class="title"> Developer and Data Scientist <br /> (Junior Technical Analyst) </div>
+						<div class="title"> Developer and Data Scientist <br /> (Technical Analyst) </div>
 						<div class="time">2018</div>
 					</div><!--//job-meta-->
 					<div class="job-desc">
@@ -499,7 +499,7 @@
 						<br />
 					</div>
 					<div class="job-meta">
-						<div class="title">Developer <br /> (Bank Clerk)</div>
+						<div class="title">Developer <br /> (Escriturário)</div>
 						<div class="time">2016 - 2018</div>
 					</div><!--//job-meta-->
 					<div class="job-desc">
@@ -556,7 +556,7 @@
 						<br />
 					</div>
 					<div class="job-meta">
-						<div class="title">Bank Clerk</div>
+						<div class="title">Escriturário</div>
 						<div class="time">2013 - 2015</div>
 					</div><!--//job-meta-->
 					<div class="job-desc">
