Inclusão de novas formações

--- a/english/index.html
+++ b/english/index.html
@@ -23,7 +23,7 @@
     <header class="header">
         <div class="top-bar container-fluid">
             <div class="actions">
-				<a class="btn d-none d-md-inline-block" href="../">Em português</a>
+				<a class="btn d-none d-md-inline-block" href="../">Português</a>
                 <a class="btn d-none d-md-inline-block" href="mailto:danielbassoribas@hotmail.com; bassosrd@tcd.ie"><i class="fas fa-paper-plane" aria-hidden="true"></i> Contact Me</a>
                 <a class="btn" href="../documents/ResumeDanielBassoRibas.pdf"><i class="fas fa-download" aria-hidden="true"></i> Download my resume </a>
             </div><!--//actions-->
@@ -139,6 +139,25 @@
 							</div>
 						</div><!--//item-inner-->
 					</div><!--//item-->				
+				<div class="item col-12 col-md-6">
+					<div class="item-inner">
+						<h3 class="degree">Artificial Intelligence Training</h3>
+						<div class="education-body">
+							Data Science Academy
+						</div><!--//education-body-->
+							<div class="time">2020</div>
+							<div class="desc">
+								Data Science Academy is a pioneer company in Brazil, regarding training in Data Science. The Aritifical Intelligence Training has 9 courses on the subject, totaling a workload of 448 hours. Courses range from Artificial Intelligence Introduction to Cognitive Systems, covering various topics on Deep Learning, Natural Language Processing, Computer Vision, Graph Analysis, among others.
+							<br />
+							<br />
+							<ul>
+								<li> Training <a href = "documents/CertificadoFIADanielBassoRibas.pdf"> certificate </a>.</li>
+								<li> Course <a href = "https://www.datascienceacademy.com.br/pages/formacao-inteligencia-artificial"> website</a>, containing information about the workload and syllabus.</li>
+							</ul>
+
+						</div>
+					</div><!--//item-inner-->
+				</div><!--//item-->		
 			</div><!--//row-->
 		</section><!--//section-->
 
@@ -388,14 +407,53 @@
 						<div class="time">2019</div>
 						<div class="desc">
 						Online course available at Udemy with a workload of 13 hours. It covers component usage, communication with APIs using Axios, React Router for creating links within the page and also application state management with Redux.
+							<br />
+							<br />
 							<ul>
 								<li> Course <a href="https://www.udemy.com/course/react-js-from-the-beginning-w-redux-and-react-router/">description and syllabus</a>.</li>
-								<li> Course <a href = "documents/TreinamentoReactRedux.pdf"> certificate</a>.</li>
+								<li> Course <a href = "documents/TreinamentoReactRedux.pdf">certificate</a>.</li>
 							</ul>
 						</div>
 					</div><!--//item-inner-->
 				</div><!--//item-->
-			
+
+				<div class="item col-12 col-md-4">
+					<div class="item-inner">
+						<h3 class="degree">Build a Backend REST API with Python & Django - Beginner</h3>
+						<div class="education-body">
+							Udemy
+						</div><!--//education-body-->
+						<div class="time">2020</div>
+						<div class="desc">
+						Online course available at Udemy with a workload of 5 hours.It covers the creation of a Djnago App and the use of API Views and Viewsets.
+							<br />
+							<br />
+							<ul>
+								<li> Course <a href="https://www.udemy.com/course/django-python/">description and syllabus</a>.</li>
+								<li> Course <a href = "documents/TreinamentoDjangoRest.pdf">certificate</a>.</li>
+							</ul>
+						</div>
+					</div><!--//item-inner-->
+				</div><!--//item-->
+
+				<div class="item col-12 col-md-4">
+					<div class="item-inner">
+						<h3 class="degree">Build a Backend REST API with Python & Django - Advanced </h3>
+						<div class="education-body">
+							Udemy
+						</div><!--//education-body-->
+						<div class="time">2020</div>
+						<div class="desc">
+						Online course available at Udemy with a workload of 8 hours. It covers utilizing Django with Docker, Test Driven Development, Travis among other topics.
+							<br />
+							<br />
+							<ul>
+								<li> Course <a href="https://www.udemy.com/nlp-natural-language-processing-with-python/"> description and syllabus </a>.</li>
+								<li> Course <a href = "documents/TreinamentoDjangoRestBeginner.pdf"> certificate </a>.</li>
+							</ul>
+						</div>
+					</div><!--//item-inner-->
+				</div><!--//item-->
 			</div><!--//row-->
 			
 		</section><!--//section-->
