--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header">
         <div class="top-bar container-fluid">
             <div class="actions">
-				<a class="btn d-none d-md-inline-block" href="english">In English</a>
+				<a class="btn d-none d-md-inline-block" href="english">English</a>
                 <a class="btn d-none d-md-inline-block" href="mailto:danielbassoribas@hotmail.com; bassosrd@tcd.ie"><i class="fas fa-paper-plane" aria-hidden="true"></i> Entre em Contato</a>
                 <a class="btn" href="documents/CurriculoDanielBassoRibas.pdf"><i class="fas fa-download" aria-hidden="true"></i> Baixe meu currículo</a>
             </div><!--//actions-->
@@ -51,7 +51,7 @@
             <div class="container text-center">
                 <ul class="list-inline">
                     <li class="email list-inline-item"><i class="fas fa-envelope"></i><a href="mailto:bassosrd@tcd.ie">bassosrd@tcd.ie</a></li>
-                    <li class="email list-inline-item"><i class="fas fa-envelope"></i><a href="mailto:contato@danielbassoribas.com">danielbassoribas@hotmail.com</a></li>
+                    <!-- <li class="email list-inline-item"><i class="fas fa-envelope"></i><a href="mailto:contato@danielbassoribas.com">danielbassoribas@hotmail.com</a></li> -->
                     <!-- <li class="list-inline-item"><i class="fas fa-phone"></i> <a href=""></a></li> -->
                 </ul>
             </div><!--//container-->
@@ -118,31 +118,53 @@
 			</div><!--//row-->
 			<div class="row">
 				<div class="item col-12 col-md-6">
-						<div class="item-inner">
-							<h3 class="degree">Data Science e Big Data</h3>
-							<div class="education-body">
-								Universidade Federal do Paraná
-							</div><!--//education-body-->
-							<div class="time">2018 - 2019</div>
-							<div class="desc">
-								O curso de especialização em Data Science &amp; Big Data é uma parceria
-								entre os Departamentos de Estatística e Informática da Universidade
-								Federal do Paraná. Tal parceria oferece à você a oportunidade única de
-								aprender e discutir todos os aspectos da ciência de dados e Big Data com
-								professores especializados em cada uma das etapas do <em>Data Science’s
-								workflow</em>. Aliando as poderosas ferramentas de análises estatísticas com
-								as tecnologias para armazenamento e manipulação de gigantescas massas de
-								dados, você estará pronto para prosperar na revolução da era da
-								informação.
-								<br />
-								<br />
-								<ul>
-									<li> <a href = "http://dsbd.leg.ufpr.br/"> Site</a> da especialização, contendo ementa, carga horária e demais informações.</li>
-								</ul>
+					<div class="item-inner">
+						<h3 class="degree">Data Science e Big Data</h3>
+						<div class="education-body">
+							Universidade Federal do Paraná
+						</div><!--//education-body-->
+						<div class="time">2018 - 2019</div>
+						<div class="desc">
+							O curso de especialização em Data Science &amp; Big Data é uma parceria
+							entre os Departamentos de Estatística e Informática da Universidade
+							Federal do Paraná. Tal parceria oferece à você a oportunidade única de
+							aprender e discutir todos os aspectos da ciência de dados e Big Data com
+							professores especializados em cada uma das etapas do <em>Data Science’s
+							workflow</em>. Aliando as poderosas ferramentas de análises estatísticas com
+							as tecnologias para armazenamento e manipulação de gigantescas massas de
+							dados, você estará pronto para prosperar na revolução da era da
+							informação.
+							<br />
+							<br />
+							<ul>
+								<li> <a href = "http://dsbd.leg.ufpr.br/"> Site</a> da especialização, contendo ementa, carga horária e demais informações.</li>
+							</ul>
 
-							</div>
-						</div><!--//item-inner-->
-					</div><!--//item-->				
+						</div>
+					</div><!--//item-inner-->
+				</div><!--//item-->
+				<div class="item col-12 col-md-6">
+					<div class="item-inner">
+						<h3 class="degree">Formação Inteligência Artificial</h3>
+						<div class="education-body">
+							Data Science Academy
+						</div><!--//education-body-->
+							<div class="time">2020</div>
+							<div class="desc">
+							A Data Science Academy é pioneira no Brasil no ramo de capacitação em Ciência de Dados.
+							A Formação Inteligência Aritifical conta com 9 cursos sobre o tema, totalizando um carga horária de 
+							448 horas. Os cursos vão desde a Introdução à Inteligência Artificial até Sistemas Cognitivos, passando
+							vários tópicos sobre Deep Learning, Processamento de Linguagem Natural, Visão Computacional, Análise de Grafos, entre outros.
+							<br />
+							<br />
+							<ul>
+								<li> <a href = "documents/CertificadoFIADanielBassoRibas.pdf"> Certificado </a> de conclusão da formação.</li>
+								<li> <a href = "https://www.datascienceacademy.com.br/pages/formacao-inteligencia-artificial"> Site</a> da formação, contendo ementa, carga horária e demais informações.</li>
+							</ul>
+
+						</div>
+					</div><!--//item-inner-->
+				</div><!--//item-->				
 			</div><!--//row-->
 		</section><!--//section-->
 
@@ -393,9 +415,49 @@
 						<div class="time">2019</div>
 						<div class="desc">
 						Curso online disponibilizado na Udemy com carga horária de 13 horas. Cobre a utilização de componentes, comunicação com APIs usando Axios, React Router para a criação de links dentro da página e também gerenciamento do estado da aplicação com Redux.
+							<br />
+							<br />
 							<ul>
 								<li> <a href="https://www.udemy.com/nlp-natural-language-processing-with-python/"> Descrição e ementa </a> do conteúdo do curso.</li>
 								<li> <a href = "documents/TreinamentoReactRedux.pdf"> Certificado </a> do treinamento.</li>
+							</ul>
+						</div>
+					</div><!--//item-inner-->
+				</div><!--//item-->
+
+				<div class="item col-12 col-md-4">
+					<div class="item-inner">
+						<h3 class="degree">Build a Backend REST API with Python & Django - Beginner</h3>
+						<div class="education-body">
+							Udemy
+						</div><!--//education-body-->
+						<div class="time">2020</div>
+						<div class="desc">
+						Curso online disponibilizado na Udemy com carga horária de 5 horas. Cobre a criação de uma aplicação Django e a utilização de API Views e Viewsets.
+							<br />
+							<br />
+							<ul>
+								<li> <a href="https://www.udemy.com/course/django-python/"> Descrição e ementa </a> do conteúdo do curso.</li>
+								<li> <a href = "documents/TreinamentoDjangoRest.pdf"> Certificado </a> do treinamento.</li>
+							</ul>
+						</div>
+					</div><!--//item-inner-->
+				</div><!--//item-->
+
+				<div class="item col-12 col-md-4">
+					<div class="item-inner">
+						<h3 class="degree">Build a Backend REST API with Python & Django - Advanced </h3>
+						<div class="education-body">
+							Udemy
+						</div><!--//education-body-->
+						<div class="time">2020</div>
+						<div class="desc">
+						Curso online disponibilizado na Udemy com carga horária de 8 horas. Cobre tópicos como a utilização do Docker, Test Driven Development, Travis e outros.
+						<br />
+						<br />
+							<ul>
+								<li> <a href="https://www.udemy.com/nlp-natural-language-processing-with-python/"> Descrição e ementa </a> do conteúdo do curso.</li>
+								<li> <a href = "documents/TreinamentoDjangoRestBeginner.pdf"> Certificado </a> do treinamento.</li>
 							</ul>
 						</div>
 					</div><!--//item-inner-->
